--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet">
-    <title>Contacto - Brawy siempre brinda atencion al cliente</title>
+    <title>Ayuda - Brawy siempre brinda atencion al cliente</title>
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
                         <a class="nav-link " href="index.html" target="_blank">Inicio</a>
                         <a class="nav-link" href="sobre.html" target="_blank">Historia</a>
                         <a class="nav-link " href="produ.html" target="_blank">Productos</a>
-                        <a class="nav-link active" href="contacto.html" target="_blank">Contacto</a>
+                        <a class="nav-link active" href="contacto.html" target="_blank">Ayuda</a>
                     </div>
                     <div class="navbar-nav ms-auto flex-row flex-wrap text-light">
                         <div class="nav-link col-6 col-md-auto p-3">
@@ -44,5 +44,6 @@
             </div>
           </nav>
     </header>
+
 </body>
 </html>
