--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link active" href="index.html" target="_blank">Inicio</a>
                         <a class="nav-link" href="sobre.html" target="_blank">Historia</a>
                         <a class="nav-link" href="produ.html" target="_blank">Productos</a>
-                        <a class="nav-link" href="contacto.html" target="_blank">Contacto</a>
+                        <a class="nav-link" href="contacto.html" target="_blank">Ayuda</a>
                     </div>
                     <div class="navbar-nav ms-auto flex-row flex-wrap text-light">
                         <div class="nav-link col-6 col-md-auto p-3">
