--- a/produ.html
+++ b/produ.html
@@ -28,7 +28,7 @@
                         <a class="nav-link " href="index.html" target="_blank">Inicio</a>
                         <a class="nav-link" href="sobre.html" target="_blank">Historia</a>
                         <a class="nav-link active" href="produ.html" target="_blank">Productos</a>
-                        <a class="nav-link" href="contacto.html" target="_blank">Contacto</a>
+                        <a class="nav-link" href="contacto.html" target="_blank">Ayuda</a>
                     </div>
                     <div class="navbar-nav ms-auto flex-row flex-wrap text-light">
                         <div class="nav-link col-6 col-md-auto p-3">
@@ -167,7 +167,7 @@
           <li class="nav-item"><a href="index.html" target="_blank" class="nav-link px-2 text-muted">Inicio</a></li>
           <li class="nav-item"><a href="sobre.html" target="_blank" class="nav-link px-2 text-muted">Historia</a></li>
           <li class="nav-item"><a href="produ.html" target="_blank" class="nav-link px-2 text-muted">Productos</a></li>
-          <li class="nav-item"><a href="contacto.html" target="_blank" class="nav-link px-2 text-muted">Contacto</a></li>
+          <li class="nav-item"><a href="contacto.html" target="_blank" class="nav-link px-2 text-muted">Ayuda</a></li>
         </ul>
     </footer>
     <!-- JavaScript Bundle with Popper -->
