--- a/sobre.html
+++ b/sobre.html
@@ -136,7 +136,7 @@
               <li class="nav-item"><a href="index.html" target="_blank" class="nav-link px-2 text-muted">Inicio</a></li>
               <li class="nav-item"><a href="sobre.html" target="_blank" class="nav-link px-2 text-muted">Historia</a></li>
               <li class="nav-item"><a href="produ.html" target="_blank" class="nav-link px-2 text-muted">Productos</a></li>
-              <li class="nav-item"><a href="contacto.html" target="_blank" class="nav-link px-2 text-muted">Contacto</a></li>
+              <li class="nav-item"><a href="contacto.html" target="_blank" class="nav-link px-2 text-muted">Ayuda</a></li>
             </ul>
         </footer>
 
