--- a/produ.html
+++ b/produ.html
@@ -159,8 +159,8 @@
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top ">
         <p class="col-md-4 mb-0 text-muted">© 2022 Brawy, Inc</p>
     
-        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-          <img src="./img/nav.png"
+        <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+          <img src="./img/nav.png">
         </a>
     
         <ul class="nav col-md-4  justify-content-end">
