Arreglos de contacto

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
         <p class="col-md-4 mb-0 text-muted">© 2022 Brawy, Inc</p>
     
         <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-          <img src="./img/nav.png"
+          <img src="./img/nav.png">
         </a>
     
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item"><a href="index.html" target="_blank" class="nav-link px-2 text-muted">Inicio</a></li>
           <li class="nav-item"><a href="sobre.html" target="_blank" class="nav-link px-2 text-muted">Historia</a></li>
           <li class="nav-item"><a href="produ.html" target="_blank" class="nav-link px-2 text-muted">Productos</a></li>
-          <li class="nav-item"><a href="contacto.html" target="_blank" class="nav-link px-2 text-muted">Contacto</a></li>
+          <li class="nav-item"><a href="contacto.html" target="_blank" class="nav-link px-2 text-muted">Ayuda</a></li>
         </ul>
     </footer>
     <!-- JavaScript Bundle with Popper -->
