--- a/contacto.html
+++ b/contacto.html
@@ -45,42 +45,47 @@
           </nav>
     </header>
     <main>
-        <form action="./enviar.php" method="post">
-            <fieldset>
-                <br>
-                <br>
-                <br>
-                <p class="textoimg">Contactanos</p>
-                <div class="col-12">
-                    <label class="col-2" for="name">Nombre</label>
-                    <input class="col-8" type="text" id="name" title="Ingrese su Nombre" required>
-                </div>
-                <div class="col-12">
-                    <label class="col-2" for="lastname">Apellido</label>
-                    <input class="col-8" type="text" id="lastname" title="Ingrese su Apellido">
-                </div>
-                <div class="col-12">
-                    <label class="col-2" for="phonenumber">Telefono</label>
-                    <input class="col-8" type="tel" id="tel" title="Ingrese su número telefonico" required>
-                </div>
-                <div class="col-12">
-                    <label class="col-2" for="email">E-mail</label>
-                    <input class="col-8" type="email" id="email" title="Ingrese su e-mail" required>
-                </div>
-                <div class="col-12">
-                    <label class="col-2" for="text">Mensaje</label>
-                    <textarea class="col-8" name="message" id="message" cols="20" rows="5"></textarea>
-                </div>
-                <div class="col-12">
-                    <input class="btn-send " type="reset" value="Borrar">
-                    <input class="btn-send "type="submit" value="Enviar">
-                </div>
-            </fieldset>
-        </form>
+        <img class="w-100" src="./img/fondo3.jpg" alt="">
+        <div class="justify-content-center">
+            <form action="./enviar.php" method="post">
+                <fieldset>
+                    <legend >Contacto</legend>
+                    <div class="col-12">
+                        <label class="col-2" for="name">Nombre</label>
+                        <input class="col-8" type="text" id="name" name="name" title="Ingrese su nombre." required>
+                    </div>
+                    <div class="col-12">
+                        <label class="col-2" for="lastName">Apellido</label>
+                        <input class="col-8" type="text" id="lastName" name="lastName" title="Ingrese su apellido.">
+                    </div>
+                    <div class="col-12">
+                        <label class="col-2" for="age">Edad</label>
+                        <input class="col-2" type="number" name="age" id="age" min="18" required>
+                    </div>
+                    <div class="col-12">
+                        <label class="col-2" for="phoneNumber">Teléfono</label>
+                        <input class="col-8" type="tel" id="tel" name="tel" title="Ingrese su número telefónico.">
+                    </div>
+                    <div class="col-12">
+                        <label class="col-2" for="email">E-mail</label>
+                        <input class="col-8" type="email" id="email" name="email" title="Ingrese su dirección de mail." required>
+                    </div>
+                    <div class="col-12">
+                        <label class="col-2" for="text">Mensaje</label>
+                        <textarea class="col-8" name="message" id="message" cols="20" rows="5"></textarea>
+                    </div>
+                    <div class="col-12">
+                        <input class="btn-send" type="reset" value="Borrar">
+                        <input class="btn-send" type="submit" value="Enviar">
+                    </div>
+                </fieldset>
+            </form>
+        </div>
     </main>
 
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
