--- a/sobre.html
+++ b/sobre.html
@@ -129,7 +129,7 @@
             <p class="col-md-4 mb-0 text-muted">© 2022 Brawy, Inc</p>
         
             <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-              <img src="./img/nav.png"
+              <img src="./img/nav.png">
             </a>
         
             <ul class="nav col-md-4  justify-content-end">
@@ -139,6 +139,8 @@
               <li class="nav-item"><a href="contacto.html" target="_blank" class="nav-link px-2 text-muted">Ayuda</a></li>
             </ul>
         </footer>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     </main>
 </body>
