--- a/contacto.html
+++ b/contacto.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="./img/nav.png"></a>
+                <a class="navbar-brand" href="index.html"><img src="./img/nav.png" alt="logo de la empresa Brawy"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -46,7 +46,7 @@
           </nav>
     </header>
     <main>
-        <img class="w-100" src="./img/fondo3.jpg" alt="">
+        <img class="w-100" src="./img/fondo3.jpg" alt="Brownie redondo decoraco con dulce de leche y crema">
         <section class=" d-flex align-items-center">
             <div class="h-75 container-sm mx-auto">
                 <p class="textoimg m-3">
