--- a/sobre.html
+++ b/sobre.html
@@ -74,15 +74,15 @@
                 <div class="card-header th">Historia</div>
                 <div class="card-body">
                   <h5 class="card-title">Origenes de Brawy</h5>
-                  <p class="card-text textop">Somos <mark>Brawy</mark>, una empresa que se encarga de producir y distribuír brownies a todo el país. Contamos con distintas sedes en CABA y a lo largo del país. Esta empresa fue creada con el objetivo de crear momentos únicos e inolvidables a través de nuestros productos, debido a la escasez que se presentaba en el mercado y la gran demanda que había por parte de los consumidores. .</p>
+                  <p class="card-text textop">Somos <b>Brawy</b>, una empresa que se encarga de producir y distribuír brownies a todo el país. Contamos con distintas sedes en CABA y a lo largo del país. Esta empresa fue creada con el objetivo de crear momentos únicos e inolvidables a través de nuestros productos, debido a la escasez que se presentaba en el mercado y la gran demanda que había por parte de los consumidores. .</p>
                 </div>
             </div>
             <div class="col-lg-6 card border-light mb-4 m-3" style="max-width: 35rem;">
                 <div class="card-header th">Misión y Visión</div>
                 <div class="card-body">
                   <h5 class="card-title">Metas a futuro</h5>
-                  <p class="card-text textop"><mark>Nuestra mision</mark>es brindar dulces momentos inolvidables con nuestras deliciosas variedades de brawys a toda la Argentina.
-                    <br><mark>Nuestra visión</mark>consiste en establecer nuevas sucursales alrededor del mundo para que así nuestro producto llegue a nuevos consumidores.
+                  <p class="card-text textop"><b>Nuestra mision</b>es brindar dulces momentos inolvidables con nuestras deliciosas variedades de brawys a toda la Argentina.
+                    <br><b>Nuestra visión</b>consiste en establecer nuevas sucursales alrededor del mundo para que así nuestro producto llegue a nuevos consumidores.
                   </p>
                 </div>
             </div>
@@ -93,13 +93,13 @@
                 <div class="card-header th">Valores</div>
                 <div class="card-body">
                   <h5 class="card-title">Principios de Brawy</h5>
-                  <p class="card-text textop"><mark>1. Confianza:</mark>es la relación de calidad que se establece en nuestra empresa debido a que las dinámicas son fluidas y eficaces, nuestro nivel de confianza entre los trabajadores es alto y las relaciones son productivas. Esta misma confianza se transmite con los clientes.
+                  <p class="card-text textop"><b>1. Confianza:</b>es la relación de calidad que se establece en nuestra empresa debido a que las dinámicas son fluidas y eficaces, nuestro nivel de confianza entre los trabajadores es alto y las relaciones son productivas. Esta misma confianza se transmite con los clientes.
                     <br>
-                    <mark>2. Responsabilidad:</mark>se ve reflejada en la entrega de nuestros productos, prometemos entregarlos en tiempo y forma. Y en el caso de que el mismo no haya sido de tu agrado aceptamos su devolución.
+                    <b>2. Responsabilidad:</b>se ve reflejada en la entrega de nuestros productos, prometemos entregarlos en tiempo y forma. Y en el caso de que el mismo no haya sido de tu agrado aceptamos su devolución.
                     <br>
-                    <mark>3. Disponibilidad al cambio:</mark>estamos dispuestos a adaptarnos a los nuevos cambios que estén por venir, ya sean nuevos mercados o proyectos. Por este motivo contamos con un equipo de tecnología de último nivel que nos provee de novedades y propuestas constantes.
+                    <b>3. Disponibilidad al cambio:</b>estamos dispuestos a adaptarnos a los nuevos cambios que estén por venir, ya sean nuevos mercados o proyectos. Por este motivo contamos con un equipo de tecnología de último nivel que nos provee de novedades y propuestas constantes.
                     <br>
-                    <mark>4. Compromiso:</mark>Tanto socios como trabajadores nos comprometemos al máximo para entregar un servicio excelente y una calidad de productos excepcional a nuestros consumidores.</p>
+                    <b>4. Compromiso:</b>Tanto socios como trabajadores nos comprometemos al máximo para entregar un servicio excelente y una calidad de productos excepcional a nuestros consumidores.</p>
                 </div>
             </div>
             <div class="col-lg-6 card border-light mb-4 m-3" style="max-width: 35rem;">
