--- a/sobre.html
+++ b/sobre.html
@@ -81,8 +81,8 @@
                 <div class="card-header th">Misión y Visión</div>
                 <div class="card-body">
                   <h5 class="card-title">Metas a futuro</h5>
-                  <p class="card-text textop"><b>Nuestra mision</b>es brindar dulces momentos inolvidables con nuestras deliciosas variedades de brawys a toda la Argentina.
-                    <br><b>Nuestra visión</b>consiste en establecer nuevas sucursales alrededor del mundo para que así nuestro producto llegue a nuevos consumidores.
+                  <p class="card-text textop"><b>Nuestra mision</b> es brindar dulces momentos inolvidables con nuestras deliciosas variedades de brawys a toda la Argentina.
+                    <br><br><b>Nuestra visión</b> consiste en establecer nuevas sucursales alrededor del mundo para que así nuestro producto llegue a nuevos consumidores.
                   </p>
                 </div>
             </div>
