--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
             <div class="div col-lg-6 img2">
                 <p class="textoimg">LOS MEJORES BROWNIES DE BUENOS AIRES<br>EN LA PUERTA DE TU CASA</p>
                 <p class="textop" >
-                    En el año 2022 nace un sueño. <mark>El sueño de cuatro emprendedores </mark>que querían ofrecer algo diferente, un concepto distinto en pastelería.
-                    El significado de Brawy en latin es estar enamorado: eso es lo que <mark>nos une y le da valor a una empresa que ama lo que hace y lo expresa en cada detalle.</mark>Desde siempre tuvimos en claro que nuestra Pastelería debería tener atributos que la hicieran única.
+                    En el año 2022 nace un sueño. <b>El sueño de cuatro emprendedores </b> que querían ofrecer algo diferente, un concepto distinto en pastelería.
+                    Desde siempre tuvimos en claro que nuestra Pastelería debería tener atributos que la hicieran única.<br>
                     Nuestra misión es elaborar productos de alta calidad, utilizando los mejores ingredientes y buena técnica; innovando en sabores y recetas, con el propósito de entregar a nuestros clientes una experiencia inolvidable de sabor con nuestras recetas gourmet.
-                    <mark>Nuestro propósito es ser una de las mejores pastelerías ofreciendo lo mejor que tenemos para nuestros clientes.</mark> Así cumpliendo con una de las empresas de la mejor calidad, honestidad y responsables junto con trabajadores eficaces de sacar la empresa a delante.
-                    Nuestro desafío es ser reconocidos como una Pastelería Gourmet, por la calidad, excelencia y variedad de sus productos.
+                    <b><br>
+                    Nuestro propósito</b> es ser una de las mejores pastelerías ofreciendo lo mejor que tenemos para nuestros clientes.Así cumpliendo con una de las empresas de la mejor calidad, honestidad y responsables junto con trabajadores eficaces de sacar la empresa a delante.
                 </p>
                 <a class="btn btn-outline-dark" href="sobre.html" target="_blank">Ver más</a>
             </div>
@@ -112,7 +112,7 @@
           <img src="./img/nav.png">
         </a>
     
-        <ul class="nav col-md-4 justify-content-end">
+        <ul class="nav col-md-4 justify-content-end justify-content-sm-center">
           <li class="nav-item"><a href="index.html" target="_blank" class="nav-link px-2 text-muted">Inicio</a></li>
           <li class="nav-item"><a href="sobre.html" target="_blank" class="nav-link px-2 text-muted">Historia</a></li>
           <li class="nav-item"><a href="produ.html" target="_blank" class="nav-link px-2 text-muted">Productos</a></li>
