--- a/sobre.html
+++ b/sobre.html
@@ -74,7 +74,7 @@
                 <div class="card-header th">Historia</div>
                 <div class="card-body">
                   <h5 class="card-title">Origenes de Brawy</h5>
-                  <p class="card-text textop">Somos <b>Brawy</b>, una empresa que se encarga de producir y distribuír brownies a todo el país. Contamos con distintas sedes en CABA y a lo largo del país. Esta empresa fue creada con el objetivo de crear momentos únicos e inolvidables a través de nuestros productos, debido a la escasez que se presentaba en el mercado y la gran demanda que había por parte de los consumidores. .</p>
+                  <p class="card-text textop">Somos <b>Brawy</b>, una empresa que se encarga de producir y distribuír brownies a todo el país. Esta empresa fue creada con el objetivo de <b>crear momentos únicos e inolvidables a través de sus productos</b>, debido a la escasez que se presentaba en el mercado y la gran demanda que había por parte de los consumidores. .</p>
                 </div>
             </div>
             <div class="col-lg-6 card border-light mb-4 m-3" style="max-width: 35rem;">
@@ -93,13 +93,13 @@
                 <div class="card-header th">Valores</div>
                 <div class="card-body">
                   <h5 class="card-title">Principios de Brawy</h5>
-                  <p class="card-text textop"><b>1. Confianza:</b>es la relación de calidad que se establece en nuestra empresa debido a que las dinámicas son fluidas y eficaces, nuestro nivel de confianza entre los trabajadores es alto y las relaciones son productivas. Esta misma confianza se transmite con los clientes.
+                  <p class="card-text textop"><b>Confianza:</b> es la relación de calidad que se establece en nuestra empresa debido a que las dinámicas son fluidas y eficaces, nuestro nivel de confianza entre los trabajadores es alto y las relaciones son productivas. Esta misma confianza se transmite con los clientes.
                     <br>
-                    <b>2. Responsabilidad:</b>se ve reflejada en la entrega de nuestros productos, prometemos entregarlos en tiempo y forma. Y en el caso de que el mismo no haya sido de tu agrado aceptamos su devolución.
+                    <b>Responsabilidad:</b> se ve reflejada en la entrega de nuestros productos, prometemos entregarlos en tiempo y forma. Y en el caso de que el mismo no haya sido de tu agrado aceptamos su devolución.
                     <br>
-                    <b>3. Disponibilidad al cambio:</b>estamos dispuestos a adaptarnos a los nuevos cambios que estén por venir, ya sean nuevos mercados o proyectos. Por este motivo contamos con un equipo de tecnología de último nivel que nos provee de novedades y propuestas constantes.
+                    <b>Disponibilidad al cambio:</b> estamos dispuestos a adaptarnos a los nuevos cambios que estén por venir, ya sean nuevos mercados o proyectos. Por este motivo contamos con un equipo de tecnología de último nivel que nos provee de novedades y propuestas constantes.
                     <br>
-                    <b>4. Compromiso:</b>Tanto socios como trabajadores nos comprometemos al máximo para entregar un servicio excelente y una calidad de productos excepcional a nuestros consumidores.</p>
+                    <b>Compromiso:</b> Tanto socios como trabajadores nos comprometemos al máximo para entregar un servicio excelente y una calidad de productos excepcional a nuestros consumidores.</p>
                 </div>
             </div>
             <div class="col-lg-6 card border-light mb-4 m-3" style="max-width: 35rem;">
@@ -110,17 +110,17 @@
                     <br>
                     Elegimos el <bold>marrón</bold> porque significa:
                     <br><br>
-                    <mark>Calidez y Confort</mark>, que es lo que buscamos brindarles a nuestros consumidores.
+                    <b>Calidez y Confort</b>, que es lo que buscamos brindarles a nuestros consumidores.
                     <br>
-                    <mark>Estabilidad</mark>, que es lo que hemos logrado construir con el paso del tiempo. 
+                    <b>Estabilidad</b>, que es lo que hemos logrado construir con el paso del tiempo. 
                     <br><br><br>
                     El <bold>blanco</bold> que significa:
                     <br><br>
-                    <mark>Pureza</mark>, porque aseguramos productos de buena calidad.
+                    <b>Pureza</b>, porque aseguramos productos de buena calidad.
                     <br>
-                    <mark>Suavidad</mark>, ya que cada uno de nuestros brownies tiene la suavidad justa.
+                    <b>Suavidad</b>, ya que cada uno de nuestros brownies tiene la suavidad justa.
                     <br>
-                    <mark>Armonía</mark>, debido a que logramos una armonía de sabores única.</p>
+                    <b>Armonía</b>, debido a que logramos una armonía de sabores única.</p>
                   </p>
                 </div>
             </div>
@@ -132,7 +132,7 @@
               <img src="./img/nav.png">
             </a>
         
-            <ul class="nav col-md-4  justify-content-end">
+            <ul class="nav col-md-4  justify-content-end justify-content-sm-center">
               <li class="nav-item"><a href="index.html" target="_blank" class="nav-link px-2 text-muted">Inicio</a></li>
               <li class="nav-item"><a href="sobre.html" target="_blank" class="nav-link px-2 text-muted">Historia</a></li>
               <li class="nav-item"><a href="produ.html" target="_blank" class="nav-link px-2 text-muted">Productos</a></li>
