--- a/produ.html
+++ b/produ.html
@@ -163,7 +163,7 @@
           <img src="./img/nav.png">
         </a>
     
-        <ul class="nav col-md-4  justify-content-end">
+        <ul class="nav col-md-4  justify-content-end justify-content-sm-center">
           <li class="nav-item"><a href="index.html" target="_blank" class="nav-link px-2 text-muted">Inicio</a></li>
           <li class="nav-item"><a href="sobre.html" target="_blank" class="nav-link px-2 text-muted">Historia</a></li>
           <li class="nav-item"><a href="produ.html" target="_blank" class="nav-link px-2 text-muted">Productos</a></li>
