--- a/sobre.html
+++ b/sobre.html
@@ -108,13 +108,13 @@
                   <h5 class="card-title">Colores de Brawy</h5>
                   <p class="card-text textop">Los colores que representan a Brawy son el marrón y el blanco. 
                     <br>
-                    Elegimos el <bold>marrón</bold> porque significa:
+                    Elegimos el <mark>marrón</mark> porque significa:
                     <br><br>
                     <b>Calidez y Confort</b>, que es lo que buscamos brindarles a nuestros consumidores.
                     <br><br>
                     <b>Estabilidad</b>, que es lo que hemos logrado construir con el paso del tiempo. 
                     <br><br><br>
-                    El <bold>blanco</bold> que significa:
+                    El <mark>blanco</mark> que significa:
                     <br><br>
                     <b>Pureza</b>, porque aseguramos productos de buena calidad.
                     <br><br>
