--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 <p class="textop" >
                     En el año 2022 nace un sueño. <b>El sueño de cuatro emprendedores </b> que querían ofrecer algo diferente, un concepto distinto en pastelería.
                     Desde siempre tuvimos en claro que nuestra Pastelería debería tener atributos que la hicieran única.<br>
-                    Nuestra misión es elaborar productos de alta calidad, utilizando los mejores ingredientes y buena técnica; innovando en sabores y recetas, con el propósito de entregar a nuestros clientes una experiencia inolvidable de sabor con nuestras recetas gourmet.
+                    Elaborando productos de <b>alta calidad</b>, utilizando los <b>mejores ingredientes</b> y buena técnica; innovando en sabores y recetas, comenzamos a creecer y a tener un lugar en el mercado.
                     <b><br>
-                    Nuestro propósito</b> es ser una de las mejores pastelerías ofreciendo lo mejor que tenemos para nuestros clientes.Así cumpliendo con una de las empresas de la mejor calidad, honestidad y responsables junto con trabajadores eficaces de sacar la empresa a delante.
+                    Nuestro propósito</b> es ser una de las mejores pastelerías ofreciendo lo mejor que tenemos para nuestros clientes.
                 </p>
                 <a class="btn btn-outline-dark" href="sobre.html" target="_blank">Ver más</a>
             </div>
