--- a/sobre.html
+++ b/sobre.html
@@ -45,18 +45,18 @@
           </nav>
     </header>
     <main>
-        <div class="row m-5">
-            <div class="col-lg-4 mb-4 esco">
+        <div class="row  m-5 espe">
+            <div class="col-lg-4 mb-4 esco h-50">
                 <img class="w-100 mb-4 rounded" src="./img/sobre/3.jpg" alt="Brownie rectangular con arandanos encima dividido en 12 porciones">
                 <img class="w-100 mb-4 rounded" src="./img/sobre/31.jpg" alt="Brownie decorado con crema dulce de leche y frutos del bosque">
 
             </div>
-            <div class="col-lg-4 mb-4 esco">
-                <img class="w-100 mb-4 rounded " src="./img/sobre/41.png" alt="Brownie redondo decorado con dulce de leche, crema y frutillas">
-                <img class="w-100 mb-4 rounded espe " src="./img/sobre/4.jpg" alt="Brownie cuadrado con galletitas encima de marca americana">
+            <div class="col-lg-4 mb-4 esco h-50">
+                <img class="w-100 mb-4 rounded " src="./img/sobre/41.jpg" alt="Brownie redondo decorado con dulce de leche, crema y frutillas">
+                <img class="w-100 mb-4 rounded " src="./img/sobre/4.jpg" alt="Brownie cuadrado con galletitas encima de marca americana">
 
             </div>
-            <div class="col-lg-4 mb-4 esco">
+            <div class="col-lg-4 mb-4 esco h-50">
                 <img class="w-100 mb-4 rounded " src="./img/sobre/6.png" alt="Pila de brownies cuadrados con cholate derretido callendo encima">
                 <img class="w-100 mb-4 rounded " src="./img/sobre/61.jpg" alt="2 brownies cuadrados chicos, decorados con dulce de leche y merengue">
 
@@ -108,13 +108,13 @@
                   <h5 class="card-title"><mark>Colores de Brawy</mark></h5>
                   <p class="card-text textop">Los colores que representan a Brawy son el marrón y el blanco. 
                     <br>
-                    Elegimos el <mark>marrón</mark> porque significa:
+                    Elegimos el <b><mark>marrón</mark></b> porque significa:
                     <br><br>
                     <b>Calidez y Confort</b>, que es lo que buscamos brindarles a nuestros consumidores.
                     <br><br>
                     <b>Estabilidad</b>, que es lo que hemos logrado construir con el paso del tiempo. 
                     <br><br><br>
-                    El <mark>blanco</mark> que significa:
+                    El <b><mark>blanco</mark></b> que significa:
                     <br><br>
                     <b>Pureza</b>, porque aseguramos productos de buena calidad.
                     <br><br>
