--- a/contacto.html
+++ b/contacto.html
@@ -46,7 +46,7 @@
           </nav>
     </header>
     <main>
-        <img class="w-100" src="./img/fondo3.jpg" alt="Brownie redondo decoraco con dulce de leche y crema">
+        <img class="w-100 imgp" src="./img/fondo3.jpg" alt="Brownie redondo decoraco con dulce de leche y crema">
         <section class=" d-flex align-items-center">
             <div class="h-75 container-sm mx-auto">
                 <p class="textoimg m-3">
