--- a/produ.html
+++ b/produ.html
@@ -45,8 +45,8 @@
           </nav>
     </header>
     <main>
-        <div>
-            <img src="./img/fondo2.jpg"  class="d-block w-100">
+        <div >
+            <img src="./img/fondo2.jpg"  class="d-block w-100 imgp">
         </div>
         <div >
             <p class="textoimg">NUESTROS BROWNIES CLÁSICOS</p>
