cambio de enlaces

--- a/produ.html
+++ b/produ.html
@@ -25,10 +25,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav me-auto">
-                        <a class="nav-link " href="index.html" target="_blank">Inicio</a>
-                        <a class="nav-link" href="sobre.html" target="_blank">Historia</a>
-                        <a class="nav-link active" href="produ.html" target="_blank">Productos</a>
-                        <a class="nav-link" href="contacto.html" target="_blank">Ayuda</a>
+                        <a class="nav-link " href="index.html" >Inicio</a>
+                        <a class="nav-link" href="sobre.html" >Historia</a>
+                        <a class="nav-link active" href="produ.html">Productos</a>
+                        <a class="nav-link" href="contacto.html" >Ayuda</a>
                     </div>
                     <div class="navbar-nav ms-auto flex-row flex-wrap text-light">
                         <div class="nav-link col-6 col-md-auto p-3">
@@ -164,10 +164,10 @@
         </a>
     
         <ul class="nav col-md-4  justify-content-end ">
-          <li class="nav-item"><a href="index.html" target="_blank" class="nav-link px-2 text-muted">Inicio</a></li>
-          <li class="nav-item"><a href="sobre.html" target="_blank" class="nav-link px-2 text-muted">Historia</a></li>
-          <li class="nav-item"><a href="produ.html" target="_blank" class="nav-link px-2 text-muted">Productos</a></li>
-          <li class="nav-item"><a href="contacto.html" target="_blank" class="nav-link px-2 text-muted">Ayuda</a></li>
+          <li class="nav-item"><a href="index.html"  class="nav-link px-2 text-muted">Inicio</a></li>
+          <li class="nav-item"><a href="sobre.html"  class="nav-link px-2 text-muted">Historia</a></li>
+          <li class="nav-item"><a href="produ.html"  class="nav-link px-2 text-muted">Productos</a></li>
+          <li class="nav-item"><a href="contacto.html"  class="nav-link px-2 text-muted">Ayuda</a></li>
         </ul>
     </footer>
     <!-- JavaScript Bundle with Popper -->
