--- a/contacto.html
+++ b/contacto.html
@@ -26,10 +26,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav me-auto">
-                        <a class="nav-link " href="index.html" target="_blank">Inicio</a>
-                        <a class="nav-link" href="sobre.html" target="_blank">Historia</a>
-                        <a class="nav-link " href="produ.html" target="_blank">Productos</a>
-                        <a class="nav-link active" href="contacto.html" target="_blank">Ayuda</a>
+                        <a class="nav-link " href="index.html" >Inicio</a>
+                        <a class="nav-link" href="sobre.html" >Historia</a>
+                        <a class="nav-link " href="produ.html" >Productos</a>
+                        <a class="nav-link active" href="contacto.html" >Ayuda</a>
                     </div>
                     <div class="navbar-nav ms-auto flex-row flex-wrap text-light">
                         <div class="nav-link col-6 col-md-auto p-3">
@@ -151,9 +151,7 @@
                             <button class="btn btn-outline-dark" type="reset" value="Borrar">Borrar</button>
                             <button class="btn btn-outline-dark" type="submit" value="Enviar">Enviar</button>
                         </div>
-                        <!-- HACERLO BOTN NORMAL -->
-                        <!-- <input class="btn-send" type="reset" value="Borrar">
-                        <input class="btn-send" type="submit" value="Enviar"> -->
+
                     </div>
                 </fieldset>
             </form>
@@ -167,10 +165,10 @@
         </a>
     
         <ul class="nav col-md-4  justify-content-end ">
-          <li class="nav-item"><a href="index.html" target="_blank" class="nav-link px-2 text-muted">Inicio</a></li>
-          <li class="nav-item"><a href="sobre.html" target="_blank" class="nav-link px-2 text-muted">Historia</a></li>
-          <li class="nav-item"><a href="produ.html" target="_blank" class="nav-link px-2 text-muted">Productos</a></li>
-          <li class="nav-item"><a href="contacto.html" target="_blank" class="nav-link px-2 text-muted">Ayuda</a></li>
+          <li class="nav-item"><a href="index.html"  class="nav-link px-2 text-muted">Inicio</a></li>
+          <li class="nav-item"><a href="sobre.html"  class="nav-link px-2 text-muted">Historia</a></li>
+          <li class="nav-item"><a href="produ.html" class="nav-link px-2 text-muted">Productos</a></li>
+          <li class="nav-item"><a href="contacto.html" class="nav-link px-2 text-muted">Ayuda</a></li>
         </ul>
     </footer>
 
