cambio en sobre

--- a/sobre.html
+++ b/sobre.html
@@ -74,14 +74,14 @@
             <div class="col-lg-6 card border-light mb-4 m-3 " style="max-width: 35rem;">
                 <div class="card-header th">Historia</div>
                 <div class="card-body">
-                  <h5 class="card-title"><mark>Origenes de Brawy</mark></h5>
+                  <h5 class="card-title justify-content-center "><mark>Origenes de Brawy</mark></h5>
                   <p class="card-text textop">Somos <b>Brawy</b>, una empresa que se encarga de producir y distribuír brownies a todo el país. Esta empresa fue creada con el objetivo de <b>crear momentos únicos e inolvidables a través de sus productos</b>, debido a la escasez que se presentaba en el mercado y la gran demanda que había por parte de los consumidores. .</p>
                 </div>
             </div>
             <div class="col-lg-6 card border-light mb-4 m-3" style="max-width: 35rem;">
                 <div class="card-header th">Misión y Visión</div>
                 <div class="card-body">
-                  <h5 class="card-title"><mark>Metas a futuro</mark></h5>
+                  <h5 class="card-title justify-content-center "><mark>Metas a futuro</mark></h5>
                   <p class="card-text textop"><b>Nuestra mision</b> es brindar dulces momentos inolvidables con nuestras deliciosas variedades de brawys a toda la Argentina.
                     <br><br><b>Nuestra visión</b> consiste en establecer nuevas sucursales alrededor del mundo para que así nuestro producto llegue a nuevos consumidores.
                   </p>
@@ -94,7 +94,7 @@
             <div class="col-lg-6 card border-light mb-4 m-3 " style="max-width: 35rem;">
                 <div class="card-header th">Valores</div>
                 <div class="card-body">
-                  <h5 class="card-title"><mark>Principios de Brawy</mark></h5>
+                  <h5 class="card-title justify-content-center "><mark>Principios de Brawy</mark></h5>
                   <p class="card-text textop"><b>Confianza:</b> es la relación de calidad que se establece en nuestra empresa debido a que las dinámicas son fluidas y eficaces.
                     <br><br>
                     <b>Responsabilidad:</b> se ve reflejada en la entrega de nuestros productos, prometemos entregarlos en tiempo y forma. Y en el caso de que el mismo no haya sido de tu agrado aceptamos su devolución.
@@ -107,7 +107,7 @@
             <div class="col-lg-6 card border-light mb-4 m-3" style="max-width: 35rem;">
                 <div class="card-header th">Colores</div>
                 <div class="card-body">
-                  <h5 class="card-title"><mark>Colores de Brawy</mark></h5>
+                  <h5 class="card-title justify-content-center "><mark>Colores de Brawy</mark></h5>
                   <p class="card-text textop">Los colores que representan a Brawy son el marrón y el blanco. 
                     <br>
                     Elegimos el <b><mark>marrón</mark></b> porque significa:
