--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <b><br>
                     Nuestro propósito</b> es ser una de las mejores pastelerías ofreciendo lo mejor que tenemos para nuestros clientes.
                 </p>
-                <a class="btn btn-outline-dark" href="sobre.html" target="_blank">Ver más</a>
+                <a class="btn btn-outline-dark" href="sobre.html" >Ver más</a>
             </div>
         </div>
         <div class="row index1">
@@ -87,7 +87,7 @@
                 <p class="textoimg">NUESTRO BROWNIE CLÁSICO</p>
                 <p class="textop ">Uno de los brownies más caracteristicos de nuestra empresa es este clasico. Tiene una base de brownie de chocolate semiamargo, picos de dulce de leche y picos de merengue flambeado.Las personas lo siguen eliguiendo por su unico sabor y la mezcla perfecta de sabores.</p>
                 
-                <a class="btn btn-outline-dark" href="produ.html" target="_blank">Comprar</a>
+                <a class="btn btn-outline-dark" href="produ.html">Comprar</a>
             </div>
             <div class="div col-lg-6 img1">
                 <img src="./img/imagencarru.png" alt="brownie resondo con dulce de leche y merengue4s flambeados">
